# pulse-fourier

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
archive/: basic_q_regression.py
data/: gate_fourier.jsonl  load.py  pulse_fourier.jsonl  save.py
legacy/: basic_pulse3.py  basic_pulse_learning.py  basic_q_fourier_approximater.py  basic_qiskit.py  basic_qutip.py  dump.py  dump.txt  pulse_gates2.py
results/: fx_data.txt
scripts/: abbymitchellpulse.py  circuit10sim_run.py  circuit15sim_run.py  circuit9sim_run.py  circuit_15_run.py  circuit_9_run.py  circuit_hae_run.py  circuit_hea_run.py  coefficients_calc_plot.py  coefficients_calc_plot_c15.py  coefficients_calc_plot_c9.py  coefficients_calc_plot_hea.py  compare.py  gate_analysis.py  hadrware_efficient_sim_run.py  hubregtsen_run.py  parallel_pulse_15.py  parallel_pulse_9.py  parallel_pulse_hea.py  pulse_15_run.py  pulse_9_run.py  pulse_hea_run.py  quick.py  quick_pulse_9_run.py  temp_main.py  temp_main2.py  temp_main3.py  test_circuit_9_run.py  test_circuit_run.py  test_run.py  verify_equivalence.py
src/: basic_pulse.py  basic_pulse2.py  coefficients.py  compare.py  constants.py  correlation.py  gate_analysis.py  gate_coefficients.py  gate_fourier_models.py  gate_models.py  multi_qubit_pulse_gates.py  nn_opt.py  oneQ_pulse_gates.py  param_opt.py  pennylane_models.py  pulse_analysis.py  pulse_fourier_models.py  pulse_gates.py  quick_quiskit_models.py  run.py  run2.py
tests/: cnot.py  cz.py  h.py  h_test.py  helpers.py  pipeline.py  play_around.py  rx.py  rx_test.py  ry.py  ry_test.py  rz.py  (+1 more)
(+74 files in other folders)
